python/testData/quickFixes/PyAddImportQuickFixTest/existingImportsAlwaysSuggestedFirstEvenIfLonger/main.py
from long.pkg.path import ClassA

print(ClassA())
print(<error descr="Unresolved reference 'ClassB'">Clas<caret>sB</error>())